Giraph Change Log

Release 1.0.1 - unreleased
  GIRAPH-592: YourKit profiler (nitay)

  GIRAPH-618: Website Documentation: Aggregators (and sharded aggregators)
  (majakabiljo)

  GIRAPH-651: giraph-hive tests (nitay)

  GIRAPH-639: Add support for multiple Vertex/Edge inputs (majakabiljo)

  GIRAPH-653: Hadoop_non_secure broken (majakabiljo)

  GIRAPH-650: Exception in GiraphConfiguration initialization (majakabiljo)

  GIRAPH-648: Allow IO formats to add parameters to Configuration (majakabiljo)

  GIRAPH-635: Website Documentation: Missing presentations (ssc)

  GIRAPH-647: Update HiveIO to 0.8 (nitay)

  GIRAPH-624: ByteArrayPartition reports 0 aggregate edges when used with 
  DiskBackedPartitionStore (claudio)

  GIRAPH-636: Initialize compute OutEdges directly from input OutEdges
  (majakabiljo)

  GIRAPH-645: Specify maven deploy plugin version (nitay)

  GIRAPH-643: Maven Release settings more friendly to Git (nitay)
  
Release 1.0.0 - 2013-04-15
  GIRAPH-633: Rename VertexEdges to OutEdges (apresta)

  GIRAPH-634: InternalGiraphRunner with TestGraph is broken (majakabiljo)

  GIRAPH-617: Website Documentation: Vertex/Edge Input/Output (apresta)

  GIRAPH-634: InternalGiraphRunner with TestGraph is broken (majakabiljo)

  GIRAPH-630: Convergence detection broken in
  o.a.g.examples.PageRankVertex. (ssc via aching)

  GIRAPH-627: YARN build profile is broken. (rvs via aching)

  GIRAPH-628: Can't build Giraph without git due to mavanagaiata not
  configured right (aching).

  GIRAPH-595: InternalVertexRunner.run() should take GiraphConfiguration, not GiraphClasses
  (nitay via apresta)

  GIRAPH-364: Clean up directories created by test suite (majakabiljo)

  GIRAPH-614: SplitMasterWorker=false is broken (majakabiljo)

  GIRAPH-616: Decouple vertices and edges in DiskBackedPartitionStore and avoid writing 
  back edges when the algorithm does not change topology. (claudio)

  GIRAPH-613: Remove Writable from the interfaces implemented by Vertex (claudio)
