@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 1.0.1 - unreleased
+  GIRAPH-657: Remove unused reuseIncomingEdgeObjects option (apresta)
+
   GIRAPH-592: YourKit profiler (nitay)
 
   GIRAPH-618: Website Documentation: Aggregators (and sharded aggregators)
